# bootcamp

Day1/Doc1/hello_project/: key.txt  key.txt.pub  key2..txt  key2..txt.pub  main.py  test.py
Day1/Doc1/hello_project/hello/: greet.py  hi.py
Day1/Doc1/hello_project/hello_project.egg-info/: PKG-INFO  SOURCES.txt
Day1/Doc1/hello_project/hello_project_janmesh.egg-info/: PKG-INFO  SOURCES.txt
Day1/Doc2/mycli/: main.py  pyproject.toml
Day1/Doc2/mycli/mycli/: cli.py
Day1/Doc2/mycli/mycli.egg-info/: PKG-INFO  SOURCES.txt
Day2/Doc1/: Section_1.ipynb  Section_2.ipynb  Section_3.ipynb  Section_4.ipynb  Section_6.ipynb  Section_7.ipynb
hello_project/: pyproject.toml
hello_project/hello/: greet.py
